<resources>

    <string name="app_name">Se(s)cHat</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Se(s)cHat</string>
    <string name="generate">Generate</string>
    <string name="no_network">You have no network connection! Please enable your WLAN or GSM.</string>
    <string name="adduser_hint">Add a new contact</string>
    <string name="checkbox_description">Search for friends on the server. Your phone number will be used for that!</string>
    <string name="start_button">Start</string>
    <string name="adduser_button">Add</string>
    <string name="newnick_hint">Your Nickname</string>
    <string name="loading_hint">Loading configuration ...</string>
    <string name="no_server_connection">It seams the server you configured is offline!</string>
    <string name="cannot_login">Cannot login!</string>
    <string name="no_contact_hint">It seams you have no friends right now.\nYou can add friends manual by using there User-ID or you can sync your contact book automatically with the server!</string>
    
    <string name="searchContacts">Automatic search</string>
    <string name="addContact">Add manual contact</string>
    
    <string-array name="server_list">
        <item>connect.3nc0.de</item>
    </string-array>
    <string name="get_phone_number_hint">Please enter your phone number so that friends can find you!</string>
    <string name="add_contact_description">Type the phone number you want to add into the text field!\n\ne.g.: 12345678, 87654321</string>
    
</resources>
