<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
       	android:layout_height="fill_parent"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/noContactHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/no_contact_hint"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/addContactManual"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="addContact"
            android:text="@string/addContact"
            android:visibility="gone" />

        <Button
            android:id="@+id/addContacts"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="addContacts"
            android:text="@string/searchContacts"
            android:visibility="gone" />

    </LinearLayout>
        
        <ListView
            android:id="@+id/myContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true" >

        </ListView>
    
</LinearLayout>