<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

            <EditText
                android:id="@+id/setup_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/newnick_hint"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/setup_server_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <TextView
                android:id="@+id/getPhoneNumberHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/get_phone_number_hint"
                android:visibility="gone" />

            <EditText
                android:id="@+id/getPhoneNumberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:inputType="phone"
                android:visibility="gone" >

                <requestFocus />
            </EditText>

            <CheckBox
                android:id="@+id/setup_ifsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/checkbox_description" />

            <Button
                android:id="@+id/setup_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:onClick="generate"
                android:text="@string/start_button" />

            <ProgressBar
                android:id="@+id/setup_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:visibility="gone" />

</LinearLayout>